Fix wrapper horizontal overflow

--- a/jamsinclub/static/base.css
+++ b/jamsinclub/static/base.css
@@ -36,6 +36,7 @@ header {
     /* 아래 회색줄 */
     border-bottom: solid 0.05rem rgba(0, 0, 0, 0.3);
 
+    /* 제목 크기 */
     font-size: 1.2rem;
 }
 
@@ -72,8 +73,8 @@ main {
 }
 
 nav, .wrapper {
-    /* main 내 요소들의 여백의 미 */
-    padding: 0.5rem;
+    /* main 내 요소들의 좌우 여백의 미 */
+    padding: 0 0.5rem 0 0.5rem;
 
     /* 넘치면 스크롤바 표시 */
     display: block;
@@ -164,12 +165,12 @@ li:hover {
     width: 100%;
     height: 100%;
 
-    /* 페이지 로드 끝나면 페이드인 */
+    /* 페이지 로드 끝나면 나타나는 애니메이션 */
     animation: fadeIn 0.3s linear forwards;
 }
 
 .wrapper.fade {
-    /* 페이지 로드 시 애니메이션 적용 */
+    /* 페이지 로드 시 사라지는 애니메이션 */
     animation: fadeOut 0.3s linear forwards;
 }
 
